--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "build": "npm run build",
+    "watch": "npm run build --watch --configuration development",
+    "test": "npm run test"
   },
   "prettier": {
     "printWidth": 100,
