--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -16,6 +16,22 @@ jobs:
         with:
           node-version: '22'
           cache: 'npm'
+      - name: Create environment file
+        run: |
+          cat > src/environment.ts << EOF
+          export const environment = {
+            production: true,
+            firebase: {
+              apiKey: '${{ secrets.FIREBASE_API_KEY }}',
+              authDomain: '${{ secrets.FIREBASE_AUTH_DOMAIN }}',
+              projectId: '${{ secrets.FIREBASE_PROJECT_ID }}',
+              storageBucket: '${{ secrets.FIREBASE_STORAGE_BUCKET }}',
+              messagingSenderId: '${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}',
+              appId: '${{ secrets.FIREBASE_APP_ID }}'
+            },
+            ASSIGNMENTS_ENCRYPTION_KEY: '${{ secrets.ASSIGNMENTS_ENCRYPTION_KEY }}'
+          };
+          EOF
       - name: Install dependencies
         run: npm ci
       - name: Install Angular CLI
